--- a/optimizer/.classpath
+++ b/optimizer/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="input"/>
+	<classpathentry excluding="curriculae/" kind="src" path="input"/>
 	<classpathentry kind="src" path="output"/>
+	<classpathentry kind="src" path="input/curriculae"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
