--- a/optimizer/.classpath
+++ b/optimizer/.classpath
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="curriculae/" kind="src" path="input"/>
 	<classpathentry kind="src" path="output"/>
 	<classpathentry kind="src" path="input/curriculae"/>
+	<classpathentry kind="src" path="input/programs"/>
+	<classpathentry kind="src" path="input/details"/>
+	<classpathentry kind="src" path="input/catalog"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
