Renamed files so they don't appear as XBase

--- a/optimizer/src/info/.gitignore
+++ b/optimizer/src/info/.gitignore
@@ -6,3 +6,9 @@
 /Quad.class
 /Semester.class
 /Tag.class
+/ClassDetails.class
+/ClassTime.class
+/ClassType.class
+/Lab.class
+/Section.class
+/Subject.class
